<resources>
    <!-- ㄴㅁㅇㄻㄴㅇㄹ -->
    <string name="app_name">Capstone_Writers</string>

    <!-- MainActivity -->
    <string name="login_kor">로그인</string>
    <string name="register">회원가입</string>

    <!-- LoginActivity -->
    <string name="id">ID</string>
    <string name="pw_eng">PASSWORD</string>
    <string name="login_eng">LOG IN</string>
    <string name="back">BACK</string>

    <!-- RegisterActivity -->
    <string name="name">이름</string>
    <string name="nickname">닉네임</string>
    <string name="email">이메일</string>
    <string name="pw_kor">비밀번호 (8자리 이상)</string>
    <string name="pw_check">비밀번호 확인</string>
    <string name="regist">가입</string>
    <string name="cancle">취소</string>

    <!-- FirstMainPageActivity -->
    <string name="writers_upper">WRITERS</string>
    <string name="home">홈</string>
    <string name="write">글 쓰기</string>
    <string name="search">검색</string>
    <string name="my_page">내 정보</string>

    <!-- WriteActivity -->
    <string name="apply">등록</string>
    <string name="title">제목</string>
    <string name="contents">내용</string>
    <string name="apply_check">글을 등록하시겠습니까?</string>
    
    <!-- SearchActivity -->
    <string name="input_search">검색어를 입력해주세요.</string>

    <!-- MyPageActivity -->
    <string name="logout">로그아웃</string>
    <string name="post">포스트</string>
    <string name="review">후기글</string>
    <string name="logout_check">정말 로그아웃 하시겠습니까?</string>

    <!-- PostActivity -->
    <string name="thumb_image">ThumbImage</string>
    <string name="type">타입</string>
    <string name="category">장르</string>
    <string name="date">날짜</string>
    <string name="commission">커미션</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>