<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">


    <TextView
        android:id="@+id/LoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/login_kor"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="154dp"
        android:layout_height="55dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:layout_x="67dp"
        android:layout_y="470dp"
        android:background="@drawable/blue_solid_button"
        android:text="@string/login_eng"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PWEdit" />

    <Button
        android:id="@+id/BackBtn"
        android:layout_width="154dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="44dp"
        android:layout_x="67dp"
        android:layout_y="470dp"
        android:background="@drawable/gray_solid_button"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PWEdit" />

    <EditText
        android:id="@+id/IDEdit"
        android:layout_width="260dp"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:hint="@string/id"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginText"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/PWEdit"
        android:layout_width="260dp"
        android:layout_height="64dp"
        android:layout_marginTop="20dp"
        android:hint="@string/pw_eng"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IDEdit"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>