<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SearchActivity">

    <EditText
        android:id="@+id/SearchInput"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:hint="@string/input_search"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/SearchImage"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/SearchImage"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/search"
        android:src="@drawable/search_small_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/SearchInput"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#DBD5D5"
        app:layout_constraintTop_toBottomOf="@+id/SearchInput"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/SpinnerLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view6">

        <Spinner
            android:id="@+id/PostSpinner"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/PostList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/view7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpinnerLayout" />

    <View
        android:id="@+id/view7"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#DBD5D5"
        app:layout_constraintBottom_toTopOf="@+id/NavigateLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/NavigateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/HomeBtn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/home"
            android:padding="10dp"
            android:src="@drawable/home_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/WriteBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/WriteBtn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/write"
            android:padding="13dp"
            android:src="@drawable/write_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/SearchBtn"
            app:layout_constraintStart_toEndOf="@+id/HomeBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/SearchBtn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/search"
            android:padding="10dp"
            android:src="@drawable/search_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/MyPageBtn"
            app:layout_constraintStart_toEndOf="@+id/WriteBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/MyPageBtn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/my_page"
            android:src="@drawable/mypage_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/SearchBtn"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>